Fixed: Swag docs and updated the just file
