# internal/app/v1/docs/swagger.yaml
@@ -1,3 +1,15 @@
+definitions:
+  model.School:
+    properties:
+      address_id:
+        type: string
+      code:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -14,7 +26,69 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Swagger Example API
   version: "1.0"
-paths: {}
+paths:
+  /addresses:
+    get:
+      description: Retrieves a list of all addresses
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+      summary: Get all addresses
+      tags:
+      - addresses
+  /healthz/ping:
+    get:
+      description: Responds with a simple message to indicate the service is running
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: pong response
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Health check endpoint
+      tags:
+      - health
+  /schools:
+    get:
+      description: Get all schools
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.School'
+            type: array
+      tags:
+      - Schools
+    post:
+      description: Create a new school
+      parameters:
+      - description: School object
+        in: body
+        name: school
+        required: true
+        schema:
+          $ref: '#/definitions/model.School'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            items:
+              $ref: '#/definitions/model.School'
+            type: array
+      tags:
+      - Schools
 securityDefinitions:
   BasicAuth:
     type: basic
