# internal/app/v1/handler/healthz.go
@@ -14,7 +14,7 @@ import (
 //	@Produce		json
 //	@Success		200	{object}	map[string]string	"pong response"
 //	@BasePath		/
-//	@Router			/healthz [get]
+//	@Router			/healthz/ping [get]
 func Healthz(router *gin.Context) {
 	router.JSON(http.StatusOK, gin.H{"message": "PONG"})
 }
